--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,4 +29,5 @@ jobs:
           CI: true
 
       - name: Run Playwright tests on ${{ matrix.browser }}
-        run: npx playwright test --browser=${{ matrix.browser }}
+  run: npx playwright test src/components/tests --browser=${{ matrix.browser }}
+
