--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
-# .github/workflows/ci.yml
-name: CI – Suit of Armor
+name: CI - Suit of Armor
 
 on:
   push:
@@ -15,19 +14,65 @@ jobs:
         browser: [chromium, firefox, webkit]
     steps:
       - uses: actions/checkout@v4
-
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          
       - name: Install dependencies
         run: npm ci
-
+        
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
-
-      - name: Start Next.js in background
-        run: |
-          npm run dev & npx wait-on http://localhost:3000
+        
+      - name: Build Next.js app
+        run: npm run build
         env:
           CI: true
-
+          
+      - name: Start Next.js server
+        run: npm start &
+        env:
+          CI: true
+          
+      - name: Wait for server
+        run: npx wait-on http://localhost:3000
+        
       - name: Run Playwright tests on ${{ matrix.browser }}
-        run: npx playwright test src/components/tests --browser=${{ matrix.browser }}
-
+        run: npx playwright test --project=${{ matrix.browser }}
+        env:
+          CI: true
+          
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: playwright-report-${{ matrix.browser }}
+          path: playwright-report/
+          retention-days: 30
+          
+  ai-triage:
+    runs-on: ubuntu-latest
+    needs: e2e-tests
+    if: failure()
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Run AI Triage
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          if [ -f scripts/ai-triage.js ]; then
+            node scripts/ai-triage.js
+          else
+            echo "AI triage script not found, skipping..."
+          fi
