--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' next dev",
     "dev:clean": "npx kill-port 3000 && next dev",
     "build": "next build",
     "start": "next start",
@@ -27,6 +27,7 @@
     "@ai-sdk/anthropic": "^1.2.11",
     "@ai-sdk/openai": "^1.3.22",
     "@deepgram/sdk": "^3.6.0",
+    "@motionone/utils": "^10.18.0",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.8",
     "@radix-ui/react-context-menu": "^2.2.7",
@@ -68,6 +69,7 @@
     "react-hotkeys-hook": "^5.0.1",
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^9.0.1",
+    "react-use-measure": "^2.1.7",
     "recharts": "^2.15.2",
     "replicate": "^0.32.0",
     "sonner": "^2.0.3",
@@ -86,6 +88,7 @@
     "@types/react": "18.3.20",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
