--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "analyze-templates": "node scripts/analyze-templates.js",
     "test-api": "node test-api.js",
     "update-audio": "node scripts/update-audio-samples.js",
+    "verify-sound-etl": "node scripts/verify-sound-etl-config.js",
+    "test-sound-etl": "node scripts/test-sound-etl.js",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
@@ -37,7 +39,12 @@
     "create-env-local": "node scripts/create-env-local.js",
     "test-firebase-init": "node test-firebase-init.js",
     "test-supabase-schema": "node test-supabase-schema.js",
-    "test-migration-fixes": "npm run test-firebase-init && npm run test-supabase-schema && npm run test-migration && npm run test-complete-migration"
+    "test-migration-fixes": "npm run test-firebase-init && npm run test-supabase-schema && npm run test-migration && npm run test-complete-migration",
+    "setup-test-env": "node scripts/setup-test-env.js",
+    "setup-supabase-schema": "node scripts/setup-supabase-schema.js",
+    "test:tiktok-template-service": "node src/lib/test/tikTokTemplateService.test.js",
+    "test:supabase-schema": "node src/lib/test/supabase-schema-test.js",
+    "test-supabase-connection": "node scripts/test-supabase-connection.js"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.11",
@@ -62,7 +69,7 @@
     "@types/d3": "^7.4.3",
     "ai": "^3.3.20",
     "apify-client": "^2.12.1",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
