--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "@types/react": "18.3.20",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "chalk": "^5.4.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "dotenv-cli": "^8.0.0",
