--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "react/no-unescaped-entities": "off",
     "react-hooks/rules-of-hooks": "warn",
     "@next/next/no-img-element": "off",
-    "@next/next/no-html-link-for-pages": "off"
+    "@next/next/no-html-link-for-pages": "off",
+    "react/display-name": "off"
   }
 }
